kube/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: lunchbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: db-pvc
        - name: schema-init
          configMap:
            name: dbconfig
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: pgdata
          - mountPath: /docker-entrypoint-initdb.d/init.sql
            subPath: init.sql
            name: schema-init
