kube/grafana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: lunchbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          volumeMounts:
            - name: grafana-config
              mountPath: /grafana/etc/grafana/provisioning/datasources
          ports:
            - containerPort: 3000
      volumes:
        - name: grafana-config
          configMap:
            name: grafana-config
