kube/loki-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: lunchbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:3.4.3
          ports:
            - containerPort: 3100
