kube/pvc-debug.yml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-debugger
spec:
  containers:
  - name: debugger
    image: alpine
    command: ["/bin/sh", "-c", "sleep infinity"]
    volumeMounts:
    - mountPath: /backups
      name: backup-volume
  volumes:
  - name: backup-volume
    persistentVolumeClaim:
      claimName: db-backup-pvc
  restartPolicy: Never
