kube/app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: lunchbox
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4173
