kube/collector-service.yml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector-service
  namespace: lunchbox
spec:
  selector:
    app: otel-collector-dep
  ports:
    - name: grpc
      protocol: TCP
      port: 4317
      targetPort: 4317
    - name: metrics
      protocol: TCP
      port: 8889
      targetPort: 8889
  env:
   - name: COLLECTOR_URL
     value:
