kube/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: lunchbox
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
