kube/grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: lunchbox
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3001
