kube/loki-service.yml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: lunchbox
spec:
  selector:
    app: loki
  ports:
    - protocol: TCP
      port: 3100
      targetPort: 3100
