kube/zipkin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: lunchbox
spec:
  selector:
    app: zipkin
  ports:
    - protocol: TCP
      port: 9411
      targetPort: 9411
