kube/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: lunchbox
spec:
  rules:
    - host: lunchbox6.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  app
                port:
                  number: 80
